services/assets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assets
  labels:
    app: assets
    tier: frontend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: assets
    tier: frontend
